with-jensil-ingress/keycloak.yaml
apiVersion: v1
kind: Pod
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  containers:
    - name: keycloak
      image: europe-west1-docker.pkg.dev/camunda-researchanddevelopment/jens-lindner/rhkc:24
      args: ["start-dev"]
      ports:
        - containerPort: 8090
      securityContext:
        runAsUser: 1000
  restartPolicy: Never
