with-jensil-ingress/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jens-keycloak
  namespace: rhkc
spec:
  ingressClassName: nginx
  rules:
    - host: test.jensil.de
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 80
            path: /auth/
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - test.jensil.de
      secretName: tls-secret
